# wa-hub

./: .gitignore  CMakeLists.txt  LICENSE  README.md  install.sh
.github/workflows/: cmake.yml
config/examples/: commands.example.json  wa-hub.example.json  wa-runner.example.env  wa-runner.example.service
examples/: aliases.example.json  wa-hub.example.json
src/: wa-hub.cpp  wa-runner.cpp  wa-sub.cpp  wa_hub.cpp
tools/: wa-fifo-append.sh
